fix corner banner causing page overflow:

--- a/website/static/css/site.css
+++ b/website/static/css/site.css
@@ -34,6 +34,8 @@ nav ul li { padding: 0; }
     border-bottom: 1px solid #999;
     margin: 0;
     text-align: center;
+    position: relative;
+    overflow: hidden;
 }
 #overview ul { list-style: none; margin: 30px 0 0; display: inline-block;}
 #overview ul li {
